<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTaskActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:text="@string/name_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/date_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/priority_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/priority_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_label" />

    <Button
        android:id="@+id/cancel_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/cancel_button"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/submit_button"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="251dp"
        android:layout_height="42dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:hint="@string/name_hint"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/setdate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="25dp"
        android:text="@string/setdate_button"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="160dp"
        android:layout_height="164dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/priority_label"
        app:layout_constraintTop_toBottomOf="@+id/date_input">

        <RadioButton
            android:id="@+id/radio_button_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_button_high"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_button_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_medium"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_button_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_low"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/date_input"
        android:layout_width="134dp"
        android:layout_height="39dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/date_label"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />


</androidx.constraintlayout.widget.ConstraintLayout>